--- a/PhishOD/Panels/Cells/Value1SubtitleCell.xib
+++ b/PhishOD/Panels/Cells/Value1SubtitleCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,28 +13,45 @@
                 <rect key="frame" x="0.0" y="0.0" width="287" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2gT-6x-9aR">
-                        <rect key="frame" x="10" y="8" width="277" height="21"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123123" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2gT-6x-9aR">
+                        <rect key="frame" x="10" y="8" width="277" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="yDe-nZ-n7S"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="o1Z-eY-RTC">
-                        <rect key="frame" x="177" y="32" width="110" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1Z-eY-RTC">
+                        <rect key="frame" x="54" y="36" width="233" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="17" id="0G9-PM-sJn"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qBe-C7-afy">
-                        <rect key="frame" x="10" y="32" width="159" height="21.5"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBe-C7-afy">
+                        <rect key="frame" x="10" y="36" width="36" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="yF6-9o-2NE"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="qBe-C7-afy" firstAttribute="top" secondItem="2gT-6x-9aR" secondAttribute="bottom" constant="3" id="8MJ-Xk-TqF"/>
+                    <constraint firstItem="2gT-6x-9aR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="9FP-rH-jqk"/>
+                    <constraint firstAttribute="trailing" secondItem="o1Z-eY-RTC" secondAttribute="trailing" id="Fve-q9-W9Q"/>
+                    <constraint firstItem="qBe-C7-afy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="MFZ-ho-5W5"/>
+                    <constraint firstItem="o1Z-eY-RTC" firstAttribute="top" secondItem="2gT-6x-9aR" secondAttribute="bottom" constant="3" id="RnN-Ws-gcs"/>
+                    <constraint firstItem="o1Z-eY-RTC" firstAttribute="leading" secondItem="qBe-C7-afy" secondAttribute="trailing" constant="8" id="chj-G6-bsi"/>
+                    <constraint firstItem="2gT-6x-9aR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="gJv-Zz-DbG"/>
+                    <constraint firstItem="o1Z-eY-RTC" firstAttribute="leading" secondItem="qBe-C7-afy" secondAttribute="trailing" constant="8" id="oVn-aR-zwX"/>
+                    <constraint firstAttribute="trailing" secondItem="2gT-6x-9aR" secondAttribute="trailing" id="wrK-dd-OZL"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="subtitleLabel" destination="qBe-C7-afy" id="GgP-rb-mHK"/>
