--- a/PhishOD/Panels/Year/ShowCell.xib
+++ b/PhishOD/Panels/Year/ShowCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,19 +15,22 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="1994/04/05" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TgX-f1-ztw">
-                        <rect key="frame" x="10" y="10" width="88" height="20.5"/>
+                        <rect key="frame" x="10" y="10" width="90" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="e4C-G7-tYN"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a very long label that could be used to help the user locate the show's venue, city and state" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uQw-0n-9En">
-                        <rect key="frame" x="10" y="32" width="300" height="47.5"/>
+                        <rect key="frame" x="10" y="33" width="300" height="46"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:04:24" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q68-Uc-LO7">
-                        <rect key="frame" x="255" y="15" width="55" height="14.5"/>
+                        <rect key="frame" x="255" y="15" width="55" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="55" id="TU7-I7-mEq"/>
                         </constraints>
@@ -35,7 +38,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SBD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Btb-2C-MBJ">
-                        <rect key="frame" x="111" y="10" width="33" height="21"/>
+                        <rect key="frame" x="113" y="10" width="33" height="21"/>
                         <color key="backgroundColor" red="0.44705882670000002" green="0.69411766529999996" blue="0.27843138579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="3Hk-On-BCH"/>
@@ -46,7 +49,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="REMAST" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="siV-jS-XmS">
-                        <rect key="frame" x="149" y="10" width="56" height="21"/>
+                        <rect key="frame" x="151" y="10" width="56" height="21"/>
                         <color key="backgroundColor" red="0.31372549020000001" green="0.73725490199999999" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="56" id="9Eo-KK-HSH"/>
@@ -57,7 +60,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fbC-f4-Orb" userLabel="Heatmap View">
-                        <rect key="frame" x="210" y="21" width="43" height="4"/>
+                        <rect key="frame" x="212" y="21" width="41" height="4"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Cn-DI-Gmy" userLabel="Heatmap Value">
                                 <rect key="frame" x="0.0" y="0.0" width="20" height="4"/>
@@ -86,7 +89,7 @@
                     <constraint firstItem="fbC-f4-Orb" firstAttribute="leading" secondItem="siV-jS-XmS" secondAttribute="trailing" constant="5" id="NAM-Mm-VZQ"/>
                     <constraint firstItem="Q68-Uc-LO7" firstAttribute="trailing" secondItem="uQw-0n-9En" secondAttribute="trailing" id="Tg2-KY-Vuw"/>
                     <constraint firstItem="Q68-Uc-LO7" firstAttribute="leading" secondItem="fbC-f4-Orb" secondAttribute="trailing" constant="2" id="Wrt-le-7YG"/>
-                    <constraint firstItem="Btb-2C-MBJ" firstAttribute="trailing" secondItem="TgX-f1-ztw" secondAttribute="trailing" constant="46" id="dZf-Sb-Kws"/>
+                    <constraint firstItem="Btb-2C-MBJ" firstAttribute="trailing" secondItem="TgX-f1-ztw" secondAttribute="trailing" priority="750" constant="46" id="dZf-Sb-Kws"/>
                     <constraint firstItem="TgX-f1-ztw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="egi-hj-wBW"/>
                     <constraint firstItem="uQw-0n-9En" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="hY3-RX-OK2"/>
                     <constraint firstItem="TgX-f1-ztw" firstAttribute="leading" secondItem="uQw-0n-9En" secondAttribute="leading" id="jF3-Mw-09A"/>
